--- a/app/views/bulk_discounts/show.html.erb
+++ b/app/views/bulk_discounts/show.html.erb
@@ -1,3 +1,3 @@
 <h4>Percentage discount: <%= @discount.percent %> </h4>
 <h4>Quantity threshold: <%= @discount.threshhold %> </h4>
-<p><%= link_to "Edit #{@discount.percent}", "/merchants/#{@merchant.id}/bulk_discounts/#{@discount.id}/edit", method: :post %> </p>
+<p><%= link_to "Edit #{@discount.percent}", "/merchants/#{@merchant.id}/bulk_discounts/#{@discount.id}/edit", method: :get %> </p>
