write tests for last 3 user stories

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -3,7 +3,8 @@
   <p>Invoice #:<%= @invoice.id %></p>
   <p>Invoice Status:<%= @invoice.status %></p>
   <p>Invoice created at:<%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
-  <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue/100, precision: 0) %></p>
+  <p>Total Revenue before discounts: <%= number_to_currency(@invoice.total_revenue/100, precision: 0) %></p>
+  <p>Total Revenue with discounts: <%=  %></p>
   <p>Customer first name:<%= @invoice.customer.first_name %></p>
   <p>Customer last name:<%= @invoice.customer.last_name %></p>
 
@@ -11,14 +12,16 @@
 <hr>
 
 <% @invoice.invoice_items.each do |invoice_item| %>
-  <h3>Name: <%= invoice_item.item.name %> </h3>
-  <p>Quantity: <%= invoice_item.quantity %></p>
-  <p>Price: <%= number_to_currency(invoice_item.unit_price/100, precision: 0) %></p>
-  <p>
-    <%= form_with model: [@merchant, invoice_item], local: true do |form| %>
-      <%= form.label "Status:" %>
-      <%= form.select :status, [:pending, :packaged, :shipped], selected: invoice_item.status %>
-      <%= form.submit "Update Item Status" %>
-    <% end %>
-  </p> 
+  <section id='item-<%= invoice_item.id %>'>
+    <h3>Name: <%= invoice_item.item.name %> </h3>
+    <p>Quantity: <%= invoice_item.quantity %></p>
+    <p>Price: <%= number_to_currency(invoice_item.unit_price/100, precision: 0) %></p>
+    <p>
+      <%= form_with model: [@merchant, invoice_item], local: true do |form| %>
+        <%= form.label "Status:" %>
+        <%= form.select :status, [:pending, :packaged, :shipped], selected: invoice_item.status %>
+        <%= form.submit "Update Item Status" %>
+      <% end %>
+    </p>
+  </section>
 <% end %>
