--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -4,7 +4,8 @@
 <p>Invoice created at: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 <p>Customer first name: <%= @invoice.customer.first_name %></p>
 <p>Customer last name: <%= @invoice.customer.last_name %></p>
-<p>Total revenue before discounts: <%= @invoice.total_revenue %> </p>
+<p>Total revenue before discounts: <%= number_to_currency(@invoice.total_revenue/100, precision: 0) %> </p>
+<p>Total Revenue with discounts: <%= number_to_currency((@invoice.total_revenue/100) - (@invoice.discounted_revenue/100), precision: 0) %></p>
 <p>
   <%= form_with model: [:admin, @invoice], local: true do |form| %>
     <%= form.label "Status:" %>
